# gloss

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  THESIS.md  docker-compose.yml  pyproject.toml
.claude/skills/cycle/: SKILL.md
app/: config.py  llm.py  main.py  middleware.py  models.py  store.py
app/pipeline/: adversarial.py  assumptions.py  counterfactual.py  disagreement.py  normalizer.py  precommitment.py  temporal.py
docs/: v2_spike.md
eval/: assumptions_dataset.py  assumptions_eval.py  assumptions_fixture.py  assumptions_heldout.py  assumptions_spike.py  dataset.py  latency_harness.py  report.py  runner.py
tests/: test_accuracy.py  test_adversarial.py  test_api_compat.py  test_assumptions.py  test_calibration.py  test_call_budget.py  test_counterfactual.py  test_disagreement.py  test_integration.py  test_judge_model.py  test_middleware.py  test_normalization_faithfulness.py  test_normalizer.py  test_precommitment.py  test_report_comparison.py  test_runner_robustness.py  test_schema_enforcement.py  test_substantive_divergence.py  test_temporal.py  test_temporal_integration.py
