[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The package name is "gloss" but the code lives in app/ and eval/, so hatchling
# needs to be told which dirs to ship (otherwise `pip install .` / `-e` fails).
[tool.hatch.build.targets.wheel]
packages = ["app", "eval"]

[project]
name = "gloss"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "redis>=5.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
